--- a/server/src/package.json
+++ b/server/src/package.json
@@ -5,11 +5,11 @@
   "main": "index.js",
   "dependencies": {
     "express": "^4.16.3",
+    "lowdb": "^1.0.0",
     "socket.io": "^2.1.1"
   },
   "devDependencies": {},
-  "scripts": {
-  },
+  "scripts": {},
   "author": "lickorice | Carlos Panganiban",
   "license": "MIT"
 }
