--- a/client/src/config/config.json
+++ b/client/src/config/config.json
@@ -1,6 +1,6 @@
 {
-  "current_counter": 2,
-  "current_customer": 13,
+  "current_counter": 1,
+  "current_customer": 1,
   "max_counters": 7,
-  "ip_address": "localhost"
+  "ip_address": "192.168.254.111"
 }
