--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ client/src/node_modules
 client/src/yarn.lock
 
 client/bin
+server/src/static/shared/photos/*
+server/src/static/shared/videos/*
+!server/src/static/shared/photos/.gitkeep
+!server/src/static/shared/videos/.gitkeep
