--- a/server/src/package.json
+++ b/server/src/package.json
@@ -8,7 +8,9 @@
     "lowdb": "^1.0.0",
     "socket.io": "^2.1.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^1.17.5"
+  },
   "scripts": {},
   "author": "lickorice | Carlos Panganiban",
   "license": "MIT"
